      commit cabacfe3593324f5223e53496d80c894f48abfa2

    IBM Informix-specific:
    - Fixed an issue where PRIMARY KEYs might not get generated. This problem might be related to upstream bug
      "[CORE-1775] Informix error when creating primary key"

    New features
    ============

    - Oracle support names for NOT NULL constraints. If you want to name yours, these names can now be specified when
      creating them using the new attribute notNullConstraintName.

        <changeSet id="notNullConstraintNamingTest" author="abuschka">
            <createTable tableName="NOTNULL_NAMING_TEST">
                <column name="id" type="int"/>
                <column name="testcol" type="varchar2(50 char)">
                    <constraints nullable="false" notNullConstraintName="NN_NAMING_TEST_TESTCOL_NN" />
                </column>
                <column name="testcol2" type="int" />
            </createTable>
            <addNotNullConstraint tableName="NOTNULL_NAMING_TEST" columnName="testcol2" constraintName="NN_NAMING_TEST_TESTCOL2_NN" />
        </changeSet>

    - Completely new logging system during ChangeSet processing, produces (hopefully) better human-readable output.

    - Logging only outputs errors and warnings to STDERR now; regular messages are printed to STDOUT. This should make
      log files more readable.

    Incompatibilities
    =================

    Microsoft SQL Server:
    - Microsoft SQL Server versions before SQL Server 2008 are not supported anymore and DB-Manul will refuse to connect
      to old instances. Also, SQL Server <2008 is now (2017-05-26) completely desupported by Microsoft.

    - When snapshotting a Microsoft SQL Server database or using the generic data type names in change sets, DB-Manul will
      map the deprecated column types text, ntext and image into varchar(max), nvarchar(max) and varbinary(max) column
      types according to the recommendations at